--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" ",
-    "build": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
-    "openai": "^3.3.0"
+    "morgan": "^1.10.0",
+    "openai": "^4.56.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,7 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^20.4.8",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
