--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 500ms -q dist/index.js\" ",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon --delay 10 -q dist/index.js\" ",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "gpt4all": "^4.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
