--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.11",
+    "@langchain/core": "^0.3.17",
+    "@langchain/google-genai": "^0.1.2",
+    "@xenova/transformers": "^2.17.2",
     "bcrypt": "^5.1.0",
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
@@ -24,7 +28,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
-    "openai": "^4.56.0"
+    "openai": "^4.56.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
