--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.56.0",
     "pdf-parse": "^1.1.1"
   },
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.4.8",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.1",
